# recogcore

./: .env.example  .gitignore  HOW_IT_WORKS.md  KNOWN_ISSUES.md  LICENSE  NAMING.md  PLAN.md  README.md  config.example.yaml
backend/migrations/: 001_create_person_events.sql
data/: README.md
plan/: phase-0-skeleton.md  phase-1-face-detection.md  phase-10-deployment.md  phase-2-face-recognition.md  phase-3-tts.md  phase-4-stt-conversation.md  phase-5-logging-backend.md  phase-6-integration-testing.md  phase-7-dashboard.md  phase-8-pi-hardware.md  phase-9-sensors.md
python-service/: pyproject.toml
python-service/recog_core/: cli.py  config.py  greeting.py  provider_factory.py
python-service/recog_core/audio/: listen.py  stt.py  tts.py
python-service/recog_core/conversation/: intents.py  llm_responder.py  loop.py  responder.py
python-service/recog_core/hardware/: base.py  mac_provider.py  null_provider.py
python-service/recog_core/vision/: capture_training_photos.py  embeddings.py  face_detector.py  import_photos.py  loop.py  recognizer.py
python-service/scripts/: download_face_model.sh  download_stt_model.sh  download_tts_model.sh  run_conversation_demo.py  run_face_detection.py  smoke_test.py
python-service/tests/: test_conversation_loop.py  test_face_detector.py  test_greeting.py  test_hardware_provider.py  test_import_photos.py  test_intents.py  test_listen.py  test_recognizer.py  test_responder.py
