[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "recog-core"
version = "0.1.0"
description = "RecogCore -- CV + audio core for a home-entryway recognition assistant"
requires-python = ">=3.10"
dependencies = [
    "opencv-python",
    "sounddevice",
    "numpy",
    "pyyaml",
    "python-dotenv",
    "mediapipe",
    "dlib",
    "face_recognition",
    "Pillow",
    "pillow-heif",
    "piper-tts",
    "vosk",
    "faster-whisper",
    "anthropic",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
recogcore-run = "recog_core.cli:run"
recogcore-train = "recog_core.cli:train"

[tool.setuptools.packages.find]
include = ["recog_core*"]
